2006-04-11  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, ipmaker.py: .ipy extension now means "ipython batch file"
	in command line. E.g. "ipython test.ipy" runs test.ipy with ipython
	prefilters, allowing stuff like magics and aliases in the file.
	
	* Prompts.py, Extensions/clearcmd.py, ipy_system_conf.py: %clear magic 
	added. Supported now are "%clear in" and "%clear out" (clear input and 
	output history, respectively). Also fixed CachedOutput.flush to 
	properly flush the output cache.
	
	* Extensions/pspersistence.py: Fix %store to avoid "%store obj.attr" 
	half-success (and fail explicitly).

2006-03-28  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: Fix quoting of aliases so that only argless ones
	are quoted

2006-03-28  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: Quote aliases with spaces in the name.
	"c:\program files\blah\bin" is now legal alias target.
	
	* ext_rehashdir.py: Space no longer allowed as arg
	separator, since space is legal in path names.
	
2006-03-16  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py: Take path.py from Extensions, correcting
	%upgrade magic
	
	* ipmaker.py: Suggest using %upgrade if ipy_user_conf.py isn't found.
	
	* hooks.py: Only enclose editor binary in quotes if legal and 
	necessary (space in the name, and is an existing file). Fixes a bug
	reported by Zachary Pincus.

2006-03-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* Manual: thanks to a tip on proper color handling for Emacs, by
	Eric J Haywiser <ejh1-AT-MIT.EDU>.
	
	* ipython.el: close http://www.scipy.net/roundup/ipython/issue57
	by applying the provided patch.  Thanks to Liu Jin
	<m.liu.jin-AT-gmail.com> for the contribution.  No problems under
	XEmacs/Linux, I'm trusting the submitter that it actually helps
	under win32/GNU Emacs.  Will revisit if any problems are reported.

2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Gnuplot2.py (_FileClass): update for current Gnuplot.py